# author-clipboard

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  FEATURES.md  PROJECT_PLAN.md  README.md  SECURITY.md  cliff.toml  justfile  rustfmt.toml
.githooks/: commit-msg  pre-commit
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/memories/: conventions_and_style.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
crates/applet/: Cargo.toml
crates/applet/src/: emoji.rs  kaomoji.rs  main.rs  symbols.rs
crates/clipboard-daemon/: Cargo.toml
crates/clipboard-daemon/src/: main.rs
crates/ctl/: Cargo.toml
crates/ctl/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: compositor.rs  config.rs  db.rs  encryption.rs  file_handler.rs  image_store.rs  ipc.rs  lib.rs  quick_paste.rs  screen_lock.rs  sensitive.rs  shortcut.rs  types.rs
data/: author-clipboard-daemon.service  com.namikofficial.author-clipboard.desktop  com.namikofficial.author-clipboard.metainfo.xml
data/debian/: conffiles  postinst  prerm
docs/: CONTRIBUTING.md  DEVELOPMENT.md  LOCAL_TESTING.md  PACKAGING.md
plans/: Readme.md
