[workspace]
resolver = "2"
members = [
    "crates/clipboard-daemon",
    "crates/applet",
    "crates/shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Namik"]
repository = "https://github.com/namik/author-clipboard"

# Clippy lint configuration (equivalent to ESLint in Node.js)
[workspace.lints.clippy]
# Correctness
correctness = { level = "deny", priority = -1 }

# Suspicious code
suspicious = { level = "warn", priority = -1 }

# Code complexity
complexity = { level = "warn", priority = -1 }

# Performance
perf = { level = "warn", priority = -1 }

# Style
style = { level = "warn", priority = -1 }

# Pedantic (opinionated but useful)
pedantic = { level = "warn", priority = -1 }

# Allow specific pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.lints.rust]
# Ensure unsafe code is explicitly opted in
unsafe_code = "warn"
# Missing docs for public items
# missing_docs = "warn"  # Enable later when API stabilizes

[workspace.dependencies]
# Shared dependencies (version managed here, used in crates)
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"

# Wayland
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.2", features = ["client"] }
rustix = { version = "0.38", features = ["pipe"] }

# COSMIC (check for latest version)
libcosmic = { git = "https://github.com/pop-os/libcosmic.git" }
