[package]
name = "author-clipboard-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "author-clipboard-daemon"
path = "src/main.rs"

[dependencies]
author-clipboard-shared = { path = "../shared" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
wayland-client.workspace = true
wayland-protocols.workspace = true
wayland-protocols-wlr.workspace = true
