[package]
name = "author-clipboard-shared"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
chrono.workspace = true
thiserror.workspace = true
directories.workspace = true
tracing.workspace = true
