[package]
name = "author-clipboard-shared"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
chrono.workspace = true
thiserror.workspace = true
directories.workspace = true
tracing.workspace = true
image.workspace = true
aes-gcm.workspace = true
rand.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile = "3"
